# SIREngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.unix  cmake_install.cmake  compileSPV.sh
Config/: EngineData.ini
EASTL/: allocator.h
Editor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Editor/Application/: Application.cpp  Application.h  ContentBrowser.cpp  ContentBrowser.h  EditorPreferences.cpp  EditorPreferences.h  FileView.h  ImGuiNotify.hpp  SceneView.cpp  SceneView.h  ScriptGenerator.cpp  ScriptGenerator.h  StatsWindow.cpp  StatsWindow.h  TextEditor.cpp  TextEditor.h
Editor/Application/AssetLib/: AssetFile.cpp  AssetFile.h  TextureAtlas.h
Editor/Application/ContentBrowser/: BrowserHistory.cpp  BrowserHistory.h  BrowserInstance.cpp  BrowserInstance.h  ContentBrowser.cpp  ContentBrowser.h  FileView.cpp  FileView.h
Editor/Application/NodeEditor/: NodeBuilder.cpp  NodeBuilder.h  NodeEditor.cpp  NodeEditor.h  NodeObject.h  NodeTree.h  NodeVariable.h
Editor/Application/Project/: ProjectData.cpp  ProjectData.h  ProjectLoader.cpp  ProjectManager.cpp  ProjectManager.h
Editor/Application/ScriptLib/: ScriptCompiler.cpp  ScriptCompiler.h  ScriptNameSpaces.cpp  ScriptObject.cpp  ScriptObject.h  ScriptTabSelect.h  ScriptTextEditor.cpp  ScriptTextEditor.h
Editor/Application/Util/: FileTreeView.h  TabSelect.h  UtilPopup.h
Editor/ConfigCache/: ConfigCacheBase.h  EngineConfigCache.h  ShaderCache.h
Editor/UserInterface/: EditorConfig.h
Editor/UserInterface/GUILib/: Widget.h
Editor/Valden/Projects/: Cached.json
Editor/Valden/Projects/Unnamed/: Unnamed.proj
Editor/Valden/Projects/Unnamed/Assets/Audio/sfx/players/: PAIN3
Editor/Valden/Projects/Unnamed/Assets/Textures/menu/: backdrop.tga
Editor/Valden/Projects/Unnamed/Scripts/Classes/sgame/DataScripts/: entitydata.json
Editor/glad/: gl.h
Editor/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
Engine/Allocator/: AllocatorBase.hpp  Memory.cpp  Memory.hpp  SlabAllocator.cpp  SlabAllocator.hpp
Engine/Core/: CommandSystem.cpp  CommandSystem.hpp  Compiler.h  Compiler.hpp  Config.h  Config.hpp  ConsoleManager.cpp  ConsoleManager.h  Cvar.h  Cvar.hpp  CvarSystem.h  CvarSystem.hpp  EngineApp.h  EngineConfigManager.h  ModuleManager.h  Platform.h  Platform.hpp  ResourceDef.cpp  ResourceDef.h  ResourceDef.hpp  ResourceManager.cpp  ResourceManager.h  SIREngine.h  SIREngine.hpp  Types.h  Types.hpp  Util.cpp  Util.h  spdlog
Engine/Core/Application/GenericPlatform/: GenericApplication.cpp  GenericApplication.h
Engine/Core/Application/Posix/: PosixApplication.cpp  PosixApplication.h  PosixCrashHandler.cpp  PosixTypes.h
Engine/Core/Application/Windows/: WindowsApplication.h
Engine/Core/Events/: ControllerStatusEvent.h  EventBase.h  EventManager.cpp  EventManager.h  GamepadEvent.cpp  GamepadEvent.h  KeyCodes.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.h  TouchEvent.h  WindowEvent.h
Engine/Core/FileSystem/: FileCache.cpp  FileCache.h  FileList.h  FilePath.h  FileReader.cpp  FileReader.h  FileStream.h  FileSystem.cpp  FileSystem.h  FileWriter.cpp  FileWriter.h  IOLoadBuffer.cpp  IOLoadBuffer.h  MemoryFile.h  SearchPath.h
Engine/Core/Input/: BindingManager.h  InputManager.cpp  InputManager.h
Engine/Core/Logging/: LogMacros.h  Logger.cpp  Logger.h
Engine/Core/MathLib/: Math.h  Types.h  Vec2.h  Vec3.h  Vec4.h  VecBase.h
Engine/Core/Serialization/: SerializerBase.h
Engine/Core/Serialization/CSV/: CSVInterface.h
Engine/Core/Serialization/Ini/: IniReader.cpp  ini.c  (+3 more)
Engine/Core/SmMalloc/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine/Core/SteamAPI/: SteamManager.cpp  SteamManager.h
Engine/Core/ThreadSystem/: Mutex.h  TLS.h  Thread.h  Thread.inl  ThreadManager.hpp
Engine/Core/UserInterface/: Font.cpp  Font.h  GUILib.h  TextManager.cpp  TextManager.h  TextWidget.cpp  TextWidget.h  Widget.h
Engine/Memory/: MemAlloc.h  Memory.cpp  Memory.h
Engine/Memory/Allocators/: AllocatorBase.h  MemoryBuffer.h  SlabAllocator.cpp  SlabAllocator.h  VirtualStackAllocator.cpp  VirtualStackAllocator.h
Engine/Memory/Backend/: CachedOSPageAllocator.cpp  CachedOSPageAllocator.h  TagArenaAllocator.cpp  TagArenaAllocator.h  TaggedArenaAllocator.h  ZoneAllocator.h
Engine/Memory/Containers/: SharedPtr.h
Engine/RenderLib/: DrawBuffer.cpp  DrawBuffer.h  PostProcess.cpp  RenderBuffer.hpp  RenderCommon.h  RenderCommon.hpp  RenderContext.cpp  RenderContext.hpp  RenderLib.h  RenderMain.cpp  RenderProgram.hpp  RenderShader.hpp  RenderTexture.hpp  RenderThread.cpp  ShaderCache.h  VertexFactory.h
Engine/RenderLib/Backend/: ImageLoader.cpp  ImageLoader.h  RenderBuffer.h  RenderContext.cpp  RenderContext.h  RenderFramebuffer.h  RenderProgram.h  RenderShader.h  RenderShaderBuffer.h  RenderShaderLibrary.h  RenderShaderPipeline.cpp  RenderShaderPipeline.h  RenderTexture.h  RenderUniform.h  RenderUniformCache.h  RenderVertexArray.h
Engine/RenderLib/OpenGL/: GLBuffer.cpp  GLBuffer.hpp  GLCommon.hpp  GLContext.hpp  GLProcs.cpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexArray.hpp
Engine/RenderLib/Vulkan/: VKBuffer.cpp  VKBuffer.hpp  VKCommon.hpp  VKContext.cpp  VKContext.hpp  VKVertexArray.hpp
Engine/ScriptSystem/: ScriptJIT.cpp  ScriptJIT.h  ScriptLib.h  ScriptModule.h
Engine/SoundSystem/: SoundSystem.h
Engine/Util/: CConstList.h  CFunctionDelegate.h  CLinkedList.h  CRBTree.h  CRefCount.h  CReverseIterator.h  CSharedPtr.h  CStaticArray.h  CStrDict.h  CString.h  CVector.h  UtlMemory.h  UtlMemory.hpp  UtlString.hpp  UtlVector.hpp
Resources/Scripts/: test.json
Resources/Shaders/: ShaderConfig.json
Resources/Shaders/D3D11/: Generic.frag.hlsl  Generic.vert.hlsl  GenericVP.hlsl
Resources/Shaders/OpenGL/: Generic.frag.glsl  GenericFP.glsl  GenericVP.glsl
Resources/Shaders/Vulkan/: Generic.frag.glsl  Generic.frag.spv  Generic.glsl  Generic.vert.glsl  Generic.vert.spv  GenericVP.glsl
angelscript/: angelscript.h  as_array.h
nlohmann/: json.hpp
pngloader/: basisu_miniz.h  fpng.cpp  fpng.h  lodepng.cpp  lodepng.h  pvpngreader.cpp  pvpngreader.h
(+68 files in other folders)
